--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
             </div>
         </section>
 
-        <!-- Profile Section -->
-        <section class="profile-section" id="section">
+        <!-- Allbum Section -->
+        <section class="allbum-section" id="section">
             <h3>Our Profile</h3>
             <div class="container">
                 <div class="row">
                     <div class="col-lg-3">
-                        <div class="card">
+                        <div class="card">  
                             <div class="img">
                                 <img src="assest/album-1.jpeg" class="card-img-top" alt="album">
                             </div>
